# rpgmdec

./: Cargo.toml  LICENSE.md  README-ru.md  README.md
docs/: help-ru.md  help.md
src/: main.rs
